# pico

./: CMakeLists.txt  README.md
binary_clock/: CMakeLists.txt  binary_clock.c
thermometer/: CMakeLists.txt  segment_display.pio  thermometer.cpp
